--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p> Welcome to Git Lab </p>
-    <p> There are many things to be learn </p>
+    <p> About us </p>
 </body>
 </html>
