Content added index.html

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <p> Welcome to Git Lab </p>
     <p> There are many things to be learn </p>
+    <p> Create your own repository </p>
 </body>
 </html>
