Added changes index.html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p> Welcome to Git Lab </p>
     <p> There are many things to be learn </p>
     <p> Create your own repository </p>
+    <p> Make a good look in your performance </p>
 </body>
 </html>
