Save changes before initializing git flow

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About</title>
 </head>
 <body>
-    <p> About us </p>
+    <p> About Page </p>
     <p> A well-being person at all time </p>
 </body>
 </html>
