--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <p> Contact us </p>
+    <p> Contact Page </p>
     <p> Username : ABC </p>
     <p> Email id : abc@gmail.com </p>
 </body>
