Created new Directory

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p> There are many things to be learn </p>
     <p> Create your own repository </p>
     <p> Work hard, Win Life </p>
+    <p> Work hard, Win Life </p>
 </body>
 </html>
